--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
           </div>
         </div>
       </div>
-      <!-- <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div> -->
+      <div class="attribution absolute bottom-0">
+        Coded by
+        <a
+          class="text-1-Soft-red"
+          href="https://www.frontendmentor.io/profile/cristianccgg"
+          >Cristian Gutierrez</a
+        >.
+      </div>
     </main>
   </body>
   <script type="module" src="/app.js"></script>
